2000-06-19  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.c (providers_config_new): Should now correctly display
	the Transport page (made it set the optionmenu correctly, before it
	would only set SMTP).
	(create_transport_page): Updated to set the page info to sendmail/smtp
	based on the url.
	(create_service_page): Had to add some code to set data on some objects
	so I could grab the objects I needed to modify in the above function.

2000-06-18  Jeffrey Stedfast  <fejj@helixcode.com>

	* folder-browser.c (folder_browser_load_folder): started to add
	code to load an IMAP folder.
	
	* component-factory.c: Started to add a create_imap_storage 
	method so that we can eventually have our IMAP store displayed 
	in the tree view.
	(create_vfolder_storage): Renamed from
	create_test_storage().
	(owner_set_cb): Updated.

2000-06-17  Dan Winship  <danw@helixcode.com>

	* message-list.c (message_list_set_folder): Prevent double-freeing
	action on summary_table and uid_rowmap.

2000-06-16  Dan Winship  <danw@helixcode.com>

	* message-list.c (ml_set_value_at): Implement clicking on the
	envelope icon to set read/unread. Based on a patch by clahey.
	(select_msg): keep the timeout id for the "seen" flagging in the
	message_list structure, so ml_set_value_at can clear it so it
	doesn't re-mark a message seen after you click it unseen.

2000-06-16  Dan Winship  <danw@helixcode.com>

	* message-list.c (get_message_row): new function to do a uid to
	row mapping.
	(mark_msg_seen, select_msg, message_changed,
	message_list_set_folder): Update for Camel flag changes.
	(on_cursor_change_cmd): Rename "row_to_select" to "selected_row",
	and keep a "selected_uid" as well.

	* mail-ops.c (composer_send_cb): Update for Camel flag changes,
	and fix some memory-handling bugs. (Free the post_send_data when
	the composer is destroyed, not when the user clicks "send", which
	could happen never, or more than once.)
	(delete_msg): Update for Camel flag changes, and fix the "holding